--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -22,7 +22,6 @@
 
 <section class="container overflow-hidden py-5 my-5">
   <div class="row">
-    <p>Ensemble, on va plus loin </p>
     <h2 class="h1 pb-3 mb-lg-4 text-white">Rejoignez le JSS</h2>
   </div>
   <div class="card-info">
@@ -57,7 +56,6 @@
 
 <section class="container py-5 my-5">
   <div class="row">
-    <p>NOTRE MISSION </p>
     <h2 class="h1 pb-3 mb-lg-4 text-white">Zoom sur nos services</h2>
   </div>
   <div class="row">
@@ -152,7 +150,7 @@
 </section>
 
 <section class="container overflow-hidden py-5 my-5">
-  <generic-swiper [items]="images" subtitle="NOS BUREAUX" title="Un espace de travail ouvert et inspirant">
+  <generic-swiper [items]="images" title="Un espace de travail ouvert et inspirant">
     <ng-template let-image>
       <div class="card-wrapper">
         <div class="d-flex align-items-stretch h-100">
@@ -189,7 +187,6 @@
 
 <!-- Tools-->
 <section class="container overflow-hidden my-md-3 my-lg-2 my-xl-4 my-xxl-5">
-  <p>Nos technologies et outils</p>
   <div class="row justify-content-between">
     <div class="col">
       <h2 class="h1 pb-3 mb-lg-4 text-white">Une infrastructure performante </h2>
@@ -240,7 +237,6 @@
 <!-- Un cadre epanouissant -->
 <section class="white-tranlucid-bg">
   <div class="container py-5 my-5">
-    <p>Équilibre professionnel</p>
     <div class="row justify-content-between">
       <div class="col">
         <h2 class="h1 pb-3 mb-lg-4 text-white">Un cadre épanouissant</h2>
