--- a/client-myjss/src/app/modules/general/components/newsletter-subscription/newsletter-subscription.component.html
+++ b/client-myjss/src/app/modules/general/components/newsletter-subscription/newsletter-subscription.component.html
@@ -1,3 +1,9 @@
-<p>
-  newsletter-subscription works!
-</p>
+<section class="pt-5 mt-5 container">
+  <!-- Breadcrumb -->
+  <nav aria-label="breadcrumb">
+    <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
+      <li class="breadcrumb-item"><a routerLink="/">Accueil</a></li>
+      <li class="breadcrumb-item"><a routerLink="/demo">Newsletter</a></li>
+    </ol>
+  </nav>
+</section>
