--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -107,8 +107,8 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/assistance_dedie.svg" alt="Icon">
             <h3 class="h4 text-white mt-3">Assistance dédiée</h3>
-            <p class="mb-0">Nos équipes spécialisées sont à votre disposition pour vous conseiller, par téléphone ou par
-              e-mail. Bénéficiez d'un accompagnement précis et personnalisé !
+            <p class="mb-0">Nos équipes spécialisées sont à votre disposition pour vous conseiller. Bénéficiez d’un
+              accompagnement précis et personnalisé !
             </p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -160,7 +160,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 yellow-card align-items-center">
           <div class="card-body d-flex justify-content-center align-items-center text-center">
-            <h3 class="blue-title">MyJSS <br> la plateforme intuitive et innovante pour vos démarches !</h3>
+            <h3 class="blue-title">MyJSS <br> MyJSS, bien plus qu’un service !</h3>
           </div>
         </div>
       </div>
@@ -196,7 +196,7 @@
           <ul class="list-unstyled mb-4 mb-xl-5">
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Vos annonces légales
+              Vos annonces légales dans un SHAL
             </li>
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
@@ -208,7 +208,7 @@
             </li>
             <li class="d-flex">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Vos annonces dans le Journal Officiel
+              Vos annonces légales au Journal Officiel
             </li>
           </ul>
         </div>
@@ -249,7 +249,7 @@
             <div class="fs-sm">de types d’annonces traitées</div>
           </div>
           <div class="pe-4">
-            <div class="h2 mb-1 text-white">+ 30 000</div>
+            <div class="h2 mb-1 text-white">+&nbsp;30&nbsp;000</div>
             <div class="fs-sm">entreprises accompagnées /an</div>
           </div>
           <div>
