--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -49,23 +49,28 @@
               LIENS UTILES
             </div>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event">Commande / Devis</a>
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event"
+                routerLink="quotation">Commande / Devis</a>
             </p>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event">Démo</a>
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event" routerLink="demo">Démo</a>
             </p>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event">Tarifs</a>
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event"
+                routerLink="prices">Tarifs</a>
             </p>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event">Newsletter</a>
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event"
+                routerLink="newsletter">Newsletter</a>
             </p>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event">Contact</a>
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event"
+                routerLink="contact">Contact</a>
             </p>
             <hr>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event">Journal Spécial des
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event" routerLink="/">Journal
+                Spécial des
                 Sociétés</a>
             </p>
           </div>
@@ -79,7 +84,7 @@
               <p class="mb-0">10 Bd Haussmann,</p>
               <p>75009 Paris</p>
               <a class="mb-0" href="mailto:contact@jss.fr">contact&#64;jss.fr</a>
-              <p>01.47.03.10.10</p>
+              <p>01 47 03 10 10</p>
               <hr>
               <p class="mb-0">lun-ven : 9h00 - 12h30</p>
               <p>14h00 - 18h00</p>
