--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -275,7 +275,7 @@
   <ng-container *ngIf="!secondSearchText">
     <ng-container *ngFor="let myJssCategory of myJssCategories;">
       <div class="accordion-item border-top mb-0"
-        *ngIf="!myJssCategory.id || (myJssCategory.id>=0 && !postsByMyJssCategory[myJssCategory.id])">
+        *ngIf="!myJssCategory.id || (myJssCategory.id>=0 && !postsByMyJssCategory[myJssCategory.id]==undefined)">
         <div class="accordion-header">
           <p class="card-text placeholder-glow">
             <span class="placeholder placeholder-sm col-7 me-2"></span>
