--- a/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
@@ -70,7 +70,7 @@
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">1900</h1>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
-                  <p class="fs-2 mb-4 mb-xl-5">Première habitation dans le département de la Seine</p>
+                  <p class="fs-2 mb-4 mb-xl-5">Première habilitation dans le département de la Seine</p>
                 </div>
               </div>
               <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
