--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -8058,7 +8058,7 @@ fieldset:disabled .btn {
 }
 
 .main-background {
-  background-color: #F6F9FC !important;
+  background-color: #ecf5ff !important;
 }
 
 .bg-primary {
