second part of contact template with new constant to notify jss from new new contcat request

--- a/client-myjss/src/app/modules/general/components/contact/contact.component.css
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.css
@@ -1,3 +1,15 @@
 generic-input {
   border: none;
 }
+
+generic-textarea {
+  border: none;
+}
+
+.bg-card-green {
+  background-color: #4B6380;
+}
+
+.textarea generic-input input {
+  min-height: 200px;
+}
