--- a/client-myjss/src/app/modules/general/components/contact/contact.component.html
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.html
@@ -9,12 +9,12 @@
 </section>
 
 <section class="container my-5">
-  <div class="row pt-md-2 pt-lg-3 pt-xl-4 pb-lg-2 pb-xl-3">
-    <div class="col-6">
-      <h1 class="h1 pe-xxl-5 me-xl-4 mb-md-0 text-white">Contact</h1>
+  <div class="row align-items-center pb-lg-2 pb-xl-3">
+    <div class="col-6 d-flex align-items-center">
+      <h1 class="h1 pe-xxl-5 me-xl-4 mb-0 text-white">Contact</h1>
     </div>
-    <div class="col-6 col-xl-5 offset-xl-1">
-      <p class="text-body fs-lg mb-5 text-white">Retrouvez-nous au cœur de Paris ou écrivez-nous !
+    <div class="col-6 d-flex align-items-center">
+      <p class="text-body fs-lg mb-0 text-white">Retrouvez-nous au cœur de Paris ou écrivez-nous !
       </p>
     </div>
   </div>
@@ -24,8 +24,8 @@
     <div class="jarallax-img" style="background-image: url('assets/img/others/contact-jarallax.jpg');"></div>
   </div>
 </section>
-<section class="container">
-  <div class="border-top pb-sm-3 pt-4">
+<section class="container my-5">
+  <div class="pb-sm-3 pt-4">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 pt-2">
 
       <div class="col pb-2">
@@ -49,14 +49,14 @@
           <li class="pb-1 mb-2">
             <span class="d-block fs-sm text-body-secondary mb-1">lun - ven</span>
             <div class="d-flex align-items-center">
-              <span class="text-nav fs-lg fw-medium">9h00</span>
+              <span class="fs-lg fw-medium text-body-secondary">9h00</span>
               <span class="border-top mx-4" style="width: 36px; height: 1px;"></span>
-              <span class="text-nav fs-lg fw-medium">12h30</span>
+              <span class="fs-lg fw-medium text-body-secondary">12h30</span>
             </div>
             <div class="d-flex align-items-center">
-              <span class="text-nav fs-lg fw-medium">12h30</span>
+              <span class="text-body-secondary fs-lg fw-medium">14h00 </span>
               <span class="border-top mx-4" style="width: 36px; height: 1px;"></span>
-              <span class="text-nav fs-lg fw-medium">18h00</span>
+              <span class="text-body-secondary fs-lg fw-medium">18h00</span>
             </div>
           </li>
         </ul>
@@ -91,6 +91,12 @@
   </div>
 </section>
 
+<section>
+  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+    <div class="jarallax-img" style="background-image: url('assets/images/map.png');"></div>
+  </div>
+</section>
+
 <section class="container pt-5 pb-lg-2 pb-xl-4 py-xxl-5 my-5">
   <div class="row pb-1 pb-sm-3 pb-lg-4 d-flex align-items-center">
     <div class="col-6 pe-xxl-4">
@@ -99,35 +105,33 @@
       <p>Vous avez une question ou besoin d’éclaircissements ? Remplissez ce formulaire et notre équipe vous répondra
         au plus vite. À très bientôt !</p>
 
-      <div class="offset-xl-1">
-        <form class="needs-validation row g-4" novalidate>
-          <div class="col-sm-6">
-            <generic-input class="form-control form-control-lg" [(model)]="firstName" label="Prénom*"
-              placeholder="Prénom*" [form]="contactForm" propertyName="firstname" [isMandatory]="true"
-              [isDisabled]="false" [maxLength]="50" type="text"></generic-input>
-          </div>
-          <div class="col-sm-6">
-            <generic-input class="form-control form-control-lg" [(model)]="lastName" placeholder="Nom*" label="Nom*"
-              [form]="contactForm" propertyName="lastname" [isMandatory]="true" [isDisabled]="false" [maxLength]="50"
-              type="text"></generic-input>
-          </div>
-          <div class="col-sm-12">
-            <generic-input class="form-control form-control-lg" [(model)]="mail" placeholder="E-mail professionnel*"
-              label="E-mail professionnel*" [form]="contactForm" propertyName="mail" [isMandatory]="true"
-              [isDisabled]="false" [maxLength]="250" type="email"></generic-input>
-          </div>
-          <div class="col-sm-12">
-            <generic-input class="form-control form-control-lg" [(model)]="message" label="Message*"
-              placeholder="Votre message" [form]="contactForm" propertyName="phoneNumber" [isMandatory]="false"
-              [isDisabled]="false" [maxLength]="250" type="text"></generic-input>
-          </div>
+      <form class="needs-validation row" novalidate>
+        <div class="col-sm-6">
+          <generic-input class="form-control form-control-lg" [(model)]="firstName" label="Prénom*"
+            placeholder="Prénom*" [form]="contactForm" propertyName="firstname" [isMandatory]="true"
+            [isDisabled]="false" [maxLength]="50" type="text"></generic-input>
+        </div>
+        <div class="col-sm-6">
+          <generic-input class="form-control form-control-lg" [(model)]="lastName" placeholder="Nom*" label="Nom*"
+            [form]="contactForm" propertyName="lastname" [isMandatory]="true" [isDisabled]="false" [maxLength]="50"
+            type="text"></generic-input>
+        </div>
+        <div class="col-sm-12">
+          <generic-input class="form-control form-control-lg" [(model)]="mail" placeholder="E-mail professionnel*"
+            label="E-mail professionnel*" [form]="contactForm" propertyName="mail" [isMandatory]="true"
+            [isDisabled]="false" [maxLength]="250" type="email"></generic-input>
+        </div>
+        <div class="col-sm-12">
+          <generic-textarea class="form-control form-control-lg" [(model)]="message" label="Message*"
+            [form]="contactForm" propertyName="message" [isMandatory]="true" [isDisabled]="false" [maxLength]="250"
+            [numberOfLines]="4"></generic-textarea>
+        </div>
 
-          <div class="col-sm-12 pt-2">
-            <button class="btn btn-lg btn-primary" (click)="subscribeFormContact($event)">Envoyer ma
-              demande</button>
-          </div>
-        </form>
-      </div>
+        <div class=" col-sm-12 pt-5">
+          <button class=" btn btn-lg btn-primary w-100" (click)="subscribeFormContact($event)">Envoyer ma
+            demande</button>
+        </div>
+      </form>
     </div>
     <div class="col-6">
       <div class="row row-cols-2 g-4">
@@ -145,9 +149,9 @@
         </div>
 
         <div class="col">
-          <div class="card h-100 border-0 rounded-5">
+          <div class="card bg-card-green h-100 border-0 rounded-5">
             <div class="card-body pb-3">
-              <img src="assets/img/icons/expertise_reconnue.svg" class="w-25" alt="Icon">
+              <img src="assets/img/icons/couverture_nationale.svg" class="w-25" alt="Icon">
               <h3 class="h4 text-white mt-3">Couverture nationale</h3>
               <p class="mb-0">Le JSS publie des annonces judiciaires et légales et gère des formalités dans toute la
                 France.</p>
@@ -156,9 +160,9 @@
         </div>
 
         <div class="col">
-          <div class="card h-100 border-0 rounded-5 ">
+          <div class="card bg-card-green h-100 border-0 rounded-5 ">
             <div class="card-body pb-3">
-              <img src="assets/img/icons/Tarifs_avantageux.svg" class="w-25" alt="Icon">
+              <img src="assets/img/icons/expertise_reconnue.svg" class="w-25" alt="Icon">
               <h3 class="h4 text-white mt-3">Expertise sur mesure</h3>
               <p class="mb-0">Le savoir-faire du JSS est basé sur plus de 125 années d’expertise et se distingue par une
                 adaptation constante aux évolutions règlementaires et technologiques.</p>
