--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -161,7 +161,7 @@
             <a class="nav-link " style="cursor: pointer;" [routerLink]="'demo'">Démo</a>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="'contact'">Contact</a>
+            <a class="nav-link " style="cursor: pointer;" [routerLink]="'contact'">Contact</a>
           </li>
           <li class="nav-item col col-md-auto">
             <a class="nav-link " style="cursor: pointer;" (click)="$event">Journal Spécial des
