--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -161,6 +161,9 @@
             <a class="nav-link " style="cursor: pointer;" [routerLink]="'demo'">Démo</a>
           </li>
           <li class="nav-item col col-md-auto">
+            <a class="nav-link " style="cursor: pointer;" [routerLink]="'prices'">Tarifs</a>
+          </li>
+          <li class="nav-item col col-md-auto">
             <a class="nav-link " style="cursor: pointer;" (click)="$event">Contact</a>
           </li>
           <li class="nav-item col col-md-auto">
