--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <form class="needs-validation container position-relative z-2 pt-5 pb-lg-5 pb-md-4 pb-2" novalidate>
+  <form class="needs-validation container position-relative z-2 pt-5 pb-lg-5 pb-md-4 pb-2" novalidate
+    onsubmit="makeOrder()">
     <div class="row justify-content-between">
       <div class="col-lg-7">
         <!-- Connexion -->
@@ -153,11 +154,12 @@
     <h6 class="card-header"><i class="ai-briefcase me-2"></i>Votre entreprise</h6>
     <div class="card-body pt-2">
       <div class="mb-3">
-        <generic-toggle [(model)]="isIndividualTiers" label="Vous représentez une entreprise ?" [isMandatory]="false"
-          [form]="documentForm" propertyName="isIndividual" (isIndividualTiers)="toggleTiersIndividual()">
+        <generic-toggle [(model)]="quotation.responsable.tiers.isIndividual" label="Vous représentez une entreprise ?"
+          [isMandatory]="false" [form]="documentForm" propertyName="isIndividual"
+          (isIndividualTiers)="toggleTiersIndividual()">
         </generic-toggle>
       </div>
-      <ng-container *ngIf="!isIndividualTiers">
+      <ng-container *ngIf="!quotation.responsable.tiers.isIndividual">
         <div class="mb-3">
           <!-- <generic-input [(model)]="quotation.responsable.tiers.firstname" label="R.C.S de /!\ TODO /!\"
             [form]="documentForm" propertyName="tiersFirstname" [isMandatory]="true" [isDisabled]="false"
@@ -175,25 +177,15 @@
           </generic-input>
         </div>
         <div class="row g-3 mt-3">
-          <div>Code postal : {{quotation.responsable.tiers.postalCode}}</div>
-
-          <!-- <generic-input class="col-md-4" [(model)]="quotation.responsable.tiers.postalCode" label="Code postal"
+          <generic-input class="col-md-4" [(model)]="quotation.responsable.tiers.postalCode" label="Code postal"
             [form]="documentForm" propertyName="tiersPostalCode" [isMandatory]="true" [isDisabled]="false"
-            [maxLength]="10" (change)="computeQuotationPrice()">
-          </generic-input> -->
+            [maxLength]="10" (change)="computeQuotationPrice(false)">
+          </generic-input>
           <div>
             <autocomplete-city [(model)]="quotation.responsable.tiers.city" [form]="documentForm"
-              [modelCountry]="quotation.responsable.tiers.country"
-              [preFilterPostalCode]="quotation.responsable.tiers.postalCode" label="Ville"
-              propertyName="autocompleteCity"></autocomplete-city>
+              [modelCountry]="quotation.responsable.tiers.country" label="Ville"
+              propertyName="autocompleteTiersCity"></autocomplete-city>
           </div>
-
-
-          <!-- <autocomplete-city class="col-md-4" [(model)]="quotation.responsable.tiers.city" label="Ville"
-            [form]="documentForm" propertyName="tiersCity" [isMandatory]="true" [isDisabled]="false"
-            [modelCountry]="quotation.responsable.country"
-            [preFilterPostalCode]="quotation.responsable.tiers.postalCode">
-          </autocomplete-city> -->
           <select-country class="col-md-4" [(model)]="quotation.responsable.tiers.country" label="Pays"
             [form]="documentForm" propertyName="tiersCountry" [isMandatory]="true" [isDisabled]="false"
             (change)="prepareForPricingAndCompute()">
@@ -206,14 +198,14 @@
           </generic-input>
           <ul class="list-group mt-1">
             <li class="list-group-item" *ngFor="let phone of quotation.responsable.tiers.phones">
-              <div class="d-flex flex-wrap w-100 justify-content-between">
-                <div class="mt-auto mb-auto">&#x2022; {{phone.phoneNumber}}</div>
+              <div class="d-flex flex-wrap w-100">
                 <div>
-                  <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
+                  <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" aria-label="Supprimer"
                     (click)="deletePhone(phone, quotation.responsable, true)">
                     <i class="ai-cross"></i>
                   </button>
                 </div>
+                <div class="mt-auto mb-auto">{{phone.phoneNumber}}</div>
               </div>
             </li>
           </ul>
@@ -224,14 +216,14 @@
           </generic-input>
           <ul class="list-group mt-1">
             <li class="list-group-item" *ngFor="let mail of quotation.responsable.tiers.mails">
-              <div class="d-flex flex-wrap w-100 justify-content-between">
-                <div class="mt-auto mb-auto">&#x2022; {{mail.mail}}</div>
+              <div class="d-flex flex-wrap w-100">
                 <div>
-                  <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
+                  <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" aria-label="Supprimer"
                     (click)="deleteMailTiers(mail, quotation.responsable.tiers, true)">
                     <i class="ai-cross"></i>
                   </button>
                 </div>
+                <div class="mt-auto mb-auto">{{mail.mail}}</div>
               </div>
             </li>
           </ul>
@@ -271,39 +263,37 @@
         </generic-input>
       </div>
       <div class="row g-3 mt-3">
-        <div>Code postal : {{quotation.responsable.postalCode}}</div>
-        <!-- <generic-input class="col-md-4" [(model)]="quotation.responsable.postalCode" label="Code postal"
-          [form]="documentForm" propertyName="respPostalCode" [isMandatory]="true" [isDisabled]="false"
-          [maxLength]="10" (change)="computeQuotationPrice()">
-        </generic-input> -->
-        <div *ngIf="quotation.responsable.city">Ville : {{quotation.responsable.city.label}}</div>
-        <!-- <autocomplete-city class="col-md-4" [(model)]="quotation.responsable.city" label="Ville"
-          [form]="documentForm" propertyName="respCity" [isMandatory]="true" [isDisabled]="false"
-          [modelCountry]="quotation.responsable.country"
-          [preFilterPostalCode]="quotation.responsable.postalCode">
-        </autocomplete-city> -->
+        <generic-input class="col-md-4" [(model)]="quotation.responsable.postalCode" label="Code postal"
+          [form]="documentForm" propertyName="respPostalCode" [isMandatory]="true" [isDisabled]="false" [maxLength]="10"
+          (change)="computeQuotationPrice(false)">
+        </generic-input>
+        <div>
+          <autocomplete-city [(model)]="quotation.responsable.city" [form]="documentForm"
+            [modelCountry]="quotation.responsable.country" label="Ville"
+            propertyName="autocompleteRespCity"></autocomplete-city>
+        </div>
         <select-country class="col-md-4" [(model)]="quotation.responsable.country" label="Pays" [form]="documentForm"
           propertyName="respCountry" [isMandatory]="true" [isDisabled]="false" (change)="prepareForPricingAndCompute()">
         </select-country>
       </div>
       <div class="row g-3 mt-3">
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let phone of quotation.responsable.tiers.phones">
-            <div class="d-flex flex-wrap w-100 justify-content-between">
-              <div class="mt-auto mb-auto">{{phone.phoneNumber}}</div>
-              <div>
-                <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
-                  (click)="deletePhone(phone, quotation.responsable, true)">
-                  <i class="ai-cross"></i>
-                </button>
-              </div>
-            </div>
-          </li>
-        </ul>
         <generic-input class="col-md-6 mt-0" [(model)]="newPhoneResponsable" label="Téléphone(s) (entrer pour valider)"
           [form]="documentForm" propertyName="newPhoneResponsable" [isMandatory]="false" [isDisabled]="false"
           [icon]="'phone'" [maxLength]="13" (onEnter)="addPhone(quotation.responsable, false)">
         </generic-input>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let phone of quotation.responsable.tiers.phones">
+            <div class="d-flex flex-wrap w-100">
+              <div>
+                <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" aria-label="Supprimer"
+                  (click)="deletePhone(phone, quotation.responsable, true)">
+                  <i class="ai-cross"></i>
+                </button>
+              </div>
+              <div class="mt-auto mb-auto">{{phone.phoneNumber}}</div>
+            </div>
+          </li>
+        </ul>
 
         <generic-input class="col-md-6 mt-0" [(model)]="quotation.responsable.mail.mail" label="Votre adresse mail"
           [form]="documentForm" propertyName="respMail" [isMandatory]="true" [isDisabled]="false" type="mail"
@@ -349,20 +339,17 @@
 
             <div class="row mb-3">
               <div class="col-md-4">
-                <div>Code postal : {{document.billingPostalCode}}</div>
-
-                <!-- <generic-input [(model)]="document.billingPostalCode" label="Code postal"
-                  [form]="documentForm" propertyName="billingPostalCode" [isMandatory]="true"
-                  [isDisabled]="false" [maxLength]="10"
-                  (change)="computeDocumentPrice(document)"></generic-input> -->
+                <generic-input class="col-md-4" [(model)]="document.billingPostalCode" label="Code postal"
+                  [form]="documentForm" propertyName="docPostalCode" [isMandatory]="true" [isDisabled]="false"
+                  [maxLength]="10" (change)="computeQuotationPrice(false)">
+                </generic-input>
               </div>
 
               <div class="col-md-4">
-                <div *ngIf="document.billingLabelCity">Ville : {{document.billingLabelCity.label}}</div>
-                <!-- <autocomplete-city [(model)]="document.billingLabelCity" label="Ville"
-                  [form]="documentForm" propertyName="billingCity" [isMandatory]="true"
-                  [isDisabled]="false" [modelCountry]="document.billingLabelCountry"
-                  [preFilterPostalCode]="document.billingPostalCode"></autocomplete-city> -->
+                <autocomplete-city [(model)]="document.billingLabelCity" [form]="documentForm"
+                  [modelCountry]="document.billingLabelCountry" label="Ville"
+                  [preFilterPostalCode]="document.billingPostalCode"
+                  propertyName="autocompleteDocCity"></autocomplete-city>
               </div>
 
               <div class="col-md-4">
@@ -401,14 +388,14 @@
         <ul class="list-group mt-1 mb-3"
           *ngIf="document.addToAffaireMailList && document.mailsAffaire && document.mailsAffaire.length>0">
           <li class="list-group-item" *ngFor="let mail of document.mailsAffaire">
-            <div class="d-flex flex-wrap w-100 justify-content-between">
-              <div class="mt-auto mb-auto">{{mail.mail}}</div>
+            <div class="d-flex flex-wrap w-100">
               <div>
-                <button type="button" class="btn btn-danger btn-icon btn-sm me-3" title="Supprimer"
+                <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" title="Supprimer"
                   (click)="deleteMail(mail, document, true)">
                   <i class="ai-cross"></i>
                 </button>
               </div>
+              <div class="mt-auto mb-auto">{{mail.mail}}</div>
             </div>
           </li>
         </ul>
@@ -431,14 +418,14 @@
         <ul class="list-group mt-1 mb-3"
           *ngIf="document.addToClientMailList && document.mailsClient && document.mailsClient.length>0">
           <li class="list-group-item" *ngFor="let mail of document.mailsClient">
-            <div class="d-flex flex-wrap w-100 justify-content-between">
-              <div class="mt-auto mb-auto">{{mail.mail}}</div>
+            <div class="d-flex flex-wrap w-100">
               <div>
-                <button type="button" class="btn btn-danger btn-icon btn-sm me-3" title="Supprimer"
+                <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" title="Supprimer"
                   (click)="deleteMail(mail, document, false)">
                   <i class="ai-cross"></i>
                 </button>
               </div>
+              <div class="mt-auto mb-auto">{{mail.mail}}</div>
             </div>
           </li>
         </ul>
@@ -471,14 +458,14 @@
         <ul class="list-group mt-1 mb-3"
           *ngIf="document.addToAffaireMailList && document.mailsAffaire && document.mailsAffaire.length>0">
           <li class="list-group-item" *ngFor="let mail of document.mailsAffaire">
-            <div class="d-flex flex-wrap w-100 justify-content-between">
-              <div class="mt-auto mb-auto">{{mail.mail}}</div>
+            <div class="d-flex flex-wrap w-100">
               <div>
-                <button type="button" class="btn btn-danger btn-icon btn-sm me-3" title="Supprimer"
+                <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" title="Supprimer"
                   (click)="deleteMail(mail, document, true)">
                   <i class="ai-cross"></i>
                 </button>
               </div>
+              <div class="mt-auto mb-auto">{{mail.mail}}</div>
             </div>
           </li>
         </ul>
@@ -501,14 +488,14 @@
         <ul class="list-group mt-1 mb-3"
           *ngIf="document.addToClientMailList && document.mailsClient && document.mailsClient.length>0">
           <li class="list-group-item" *ngFor="let mail of document.mailsClient">
-            <div class="d-flex flex-wrap w-100 justify-content-between">
-              <div class="mt-auto mb-auto">{{mail.mail}}</div>
+            <div class="d-flex flex-wrap w-100">
               <div>
-                <button type="button" class="btn btn-danger btn-icon btn-sm me-3" title="Supprimer"
+                <button type="button" class="btn btn-icon btn-outline-primary btn-sm me-3" title="Supprimer"
                   (click)="deleteMail(mail, document, false)">
                   <i class="ai-cross"></i>
                 </button>
               </div>
+              <div class="mt-auto mb-auto">{{mail.mail}}</div>
             </div>
           </li>
         </ul>
@@ -629,11 +616,11 @@
         </div>
         <div class="row gx-1 gy-3 justify-content-between">
           <div class="col-auto">
-            <button class="btn btn-lg btn-primary" type="submit" (click)="saveOrder()">Enregistrer le
+            <button class="btn btn-lg btn-primary" (click)="saveOrder()">Enregistrer le
               brouillon</button>
           </div>
           <div class="col-auto">
-            <button class="btn btn-lg btn-secondary" type="submit" (click)="makeOrder()">Valider la
+            <button class="btn btn-lg btn-secondary" (click)="makeOrder()">Valider la
               commande</button>
           </div>
         </div>
