--- a/client-myjss/src/app/modules/general/components/demo/demo.component.html
+++ b/client-myjss/src/app/modules/general/components/demo/demo.component.html
@@ -40,23 +40,18 @@
               [isDisabled]="false" [maxLength]="250" type="text"></generic-input>
           </div>
           <div class="col-12">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" name="agree" type="checkbox" id="agree" [(ngModel)]="isConditionAccepted">
-              <label class="form-check-label" for="agree">J’accepte d’être contacté.e par le Journal Spécial des
+            <div class="form-check mb-4">
+              <input class="form-check-input" type="checkbox" id="cgv" [(ngModel)]="isConditionAccepted"
+                name="isConditionAccepted" required>
+              <label class="form-check-label" for="cgv">J’accepte d’être contacté.e par le Journal Spécial des
                 Sociétés
-                à des fins d’information et de marketing conformément à la Politique de Confidentialité*</label>
+                à des fins d’information et de marketing conformément à la Politique de Confidentialité*
+              </label>
             </div>
           </div>
           <div class="col-12 pt-2">
             <button class="btn btn-lg btn-primary" type="submit" (click)="getDemoByMail($event)">Demander une
               démo</button>
-          </div>
-
-          <div *ngIf="checkedOnce">
-            <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert" *ngIf="!isConditionAccepted">
-              <i class="ai-octagon-alert fs-xl"></i>
-              <div class="ps-2">L'acceptation des CGV est obligatoire</div>
-            </div>
           </div>
         </form>
       </div>
