--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
@@ -6,7 +6,7 @@
       'translate-middle-y' : !isDisplayLabel,'translate-quarter-y' : isDisplayLabel}" [class]="'ai-'+icon"></i>
     <input class="form-control form-control" [ngClass]="{'ps-45': icon}" [id]="'fl-text'+uniqueId"
       [required]="isMandatory" [maxlength]="maxLength+''" [minlength]="minLength+''" [formControlName]="propertyName"
-      [placeholder]="label" (blur)="blurForm()" (keyup.enter)="onEnterTrigger($event)"
+      [placeholder]="label" (blur)="blurForm()" (keydown.enter)="onEnterTrigger($event)"
       [type]="type=='number'?'text':type" (change)="parse($event)">
     <div class="error" *ngIf="errorMessage && form!.controls[propertyName].hasError('notFilled')">{{errorMessage}}</div>
   </div>
