--- a/client-jss/src/app/app.component.html
+++ b/client-jss/src/app/app.component.html
@@ -2,4 +2,5 @@
   <main-header></main-header>
   <router-outlet></router-outlet>
   <footer-page></footer-page>
+  <toast style="display: block; position: fixed; bottom: 20px; right: 20px; z-index: 10" class="z-3"></toast>
 </main>
