--- a/client-jss/src/app/main/components/newsletter/newsletter.component.html
+++ b/client-jss/src/app/main/components/newsletter/newsletter.component.html
@@ -18,11 +18,14 @@
       <div class="col-md-8 m-auto">
         <h2 class="text-secondary">Abonnez-vous à la Newsletter !</h2>
         <p>Recevez gratuitement un concentré d’actualité chaque semaine.</p>
-        <div class="input-group">
+        <div class="input-group" *ngIf="!isSent">
           <label class="form-label fs-base" for="email"></label>
           <input class="form-control " type="email" placeholder="E-mail" [(ngModel)]="mail" required id="email">
           <button class="btn btn-secondary" type="button" (click)="registerEmail(mail)">S'inscrire<i
               class="fas fa-envelope-open-text ms-1"></i></button>
+        </div>
+        <div *ngIf="isSent">
+          <i class="fa fa-check-circle" style="color : #3FCA90; font-size: xx-large;"></i>
         </div>
 
       </div>
