--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -1,15 +1,13 @@
 <div class="position-relative ">
-  <div [formGroup]="form!">
+  <div [formGroup]="form!" class="needs-validation">
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length>0"
       class="form-label">{{label}}</label>
     <div>
       <ng-autocomplete [data]="filteredTypes" [searchKeyword]="'label'" [placeholder]="label" [attr.name]="propertyName"
         [initialValue]="selectedItem" (selected)='optionSelected($event)' (inputChanged)='onChangeSearch($event)'
         [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate" [minQueryLength]="expectedMinLengthInput"
-        [debounceTime]="200" [attr.required]="isMandatory" (scrolledToEnd)="fetchNextPage()" #autoComp
-        [historyIdentifier]="propertyName" historyHeading="Choix récents" [isLoading]="isLoading"
-        [disabled]="isDisabled">
-      </ng-autocomplete>
+        [debounceTime]="200" (scrolledToEnd)="fetchNextPage()" #autoComp [historyIdentifier]="propertyName"
+        historyHeading="Choix récents" [isLoading]="isLoading" [disabled]="isDisabled"></ng-autocomplete>
     </div>
     <ng-template #itemTemplate let-item>
       <a [innerHTML]="item.label"></a>
