--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -50,10 +50,10 @@
         {{quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].serviceLabelToDisplay }}
       </a>
     </div>
-    <ul class="nav nav-tabs" role="tablist"
-      *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex] && quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]">
-      <li class="nav-item"
-        *ngIf="(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes || quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceDocuments)">
+    <ul class="nav nav-tabs" role="tablist" *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex] &&
+       quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]">
+      <li class="nav-item" *ngIf="(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes ||
+        quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceDocuments)">
         <a href="#documents" class="nav-link active quotation-tabs" data-bs-toggle="tab" role="tab">
           Documents
         </a>
@@ -154,140 +154,120 @@
     <!-- Tabs content Annonce légale-->
     <div *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null">
       <div class="tab-content">
-        <div
-          *ngFor="let provision of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions; let index = index"
-          [id]="'announcement' + index" class="tab-pane fade" role="tabpanel">
+        <ng-container
+          *ngFor="let provision of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions; let index = index">
+          <div
+            *ngIf="provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_ANNOUNCEMENT && provision.announcement"
+            [id]="'announcement' + index" class="tab-pane fade" role="tabpanel">
 
-          <!-- announcement form : Information -->
-          <div class="quotation-container">
-            <h6><i class="ai-circle-info me-2"></i>Information</h6>
-            <div class="row form-switch justify-content-start p-0">
-              <!-- TODO -->
-              <div class="col-md-5">
-                <label class="col-form-label" for="announcementPublicationDate">Publication
-                  souhaitée</label>
-                <div class="col">
-                  <input class="form-control" type="text" placeholder="Publier l'annonce au JSS"
-                    [ngModel]="announcementNoticeFamily?.label" (ngModelChange)="announcementNoticeFamily = $event"
-                    id="announcementNoticeFamily" type="select">
+            <!-- announcement form : Information -->
+            <div class="quotation-container">
+              <h6><i class="ai-circle-info me-2"></i>Information</h6>
+              <div class="row form-switch justify-content-start p-0">
+                <!-- TODO -->
+                <div class="col-md-5">
+                  <label class="col-form-label" for="announcementPublicationDate">Publication
+                    souhaitée</label>
+                  <div class="col">
+                    <!-- <input class="form-control" type="text" placeholder="Publier l'annonce au JSS"
+                      [ngModel]="announcementNoticeFamily?.label" (ngModelChange)="announcementNoticeFamily = $event"
+                      id="announcementNoticeFamily" type="select"> -->
+                    <!-- TODO : faire un generic select qui prend une liste de string à afficher et stocker dans le boolean isDoNotGenerateAnnouncement-->
+                  </div>
                 </div>
-              </div>
-              <div class="col-md-3">
-                <label class="col col-form-label" for="announcementPublicationDate">Date de publication
-                  souhaitée*</label>
-                <div class="col">
-                  <input class="form-control" type="text" placeholder="Date de publication souhaitée"
-                    [ngModel]="announcementPublicationDate | date:'yyyy-MM-dd'"
-                    (ngModelChange)="announcementPublicationDate = $event" id="announcementPublicationDate" type="date"
-                    [min]="minDatePublication">
+                <div class="col-md-3">
+                  <label class="col col-form-label" for="announcementPublicationDate">Date de publication
+                    souhaitée*</label>
+                  <div class="col">
+                    <generic-date-picker [(model)]="provision.announcement.publicationDate"
+                      label="Date de publication souhaitée" [form]="informationForm"
+                      [propertyName]="'publicationDate'+provision.order" [isMandatory]="true" [isDisabled]="false"
+                      [minDate]="minDatePublication"></generic-date-picker>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
 
-          <!-- announcement form : Option -->
-          <div class="quotation-container mb-2">
-            <h6><i class="ai-grid me-2"></i>Option</h6>
-            <div class="d-flex flex-wrap gap-4 align-items-center">
+            <!-- announcement form : Option -->
+            <div class="quotation-container mb-2">
+              <h6><i class="ai-grid me-2"></i>Option</h6>
+              <div class="d-flex flex-wrap gap-4 align-items-center">
 
-              <div class="form-check form-switch d-flex m-0 pe-md-5 pe-2 right-border">
-                <input type="checkbox" class="form-check-input" id="announcementRedactedByJss"
-                  [(ngModel)]="announcementRedactedByJss">
-                <label class="form-check-label ms-2 mb-0" for="announcementRedactedByJss">
-                  Confier la rédaction au JSS
-                </label>
-              </div>
+                <div class="form-check form-switch d-flex m-0 pe-md-5 pe-2 right-border">
+                  <generic-toggle [(model)]="provision.isRedactedByJss" label="Confier la rédaction au JSS"
+                    [form]="informationForm" [propertyName]="'isRedactedByJss'+provision.order"
+                    [isDisabled]="false"></generic-toggle>
+                </div>
 
-              <div class="form-check form-switch d-flex ms-md-4 m-0" *ngIf="announcementRedactedByJss">
-                <input type="checkbox" class="form-check-input" id="announcementProofReading"
-                  [(ngModel)]="announcementProofReading">
-                <label class="form-check-label ms-2 mb-0" for="announcementProofReading">
-                  Recevoir une épreuve de relecture avant publication
-                </label>
+                <div class="form-check form-switch d-flex ms-md-4 m-0" *ngIf="provision.isRedactedByJss">
+                  <generic-toggle [(model)]="provision.announcement.isProofReadingDocument"
+                    label="Recevoir une épreuve de relecture avant publication" [form]="informationForm"
+                    [propertyName]="'isProofReadingDocument'+provision.order" [isDisabled]="false"></generic-toggle>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <!-- announcement form : text area -->
-          <div *ngIf="!announcementRedactedByJss" class="quotation-container mb-5">
+            <!-- announcement form : text area -->
+            <div *ngIf="!provision.isDoNotGenerateAnnouncement && !provision.isRedactedByJss"
+              class="quotation-container mb-5">
 
-            <div class="row">
-              <div class="col-md-3">
+              <div class="row">
+                <div class="col-md-3">
 
-                <!-- Toggle relecture -->
-                <div class="form-check form-switch d-flex align-items-center mb-4">
-                  <input type="checkbox" class="form-check-input" id="announcementProofReading"
-                    [(ngModel)]="announcementProofReading">
-                  <label class="form-check-label ms-2 mb-0" for="announcementProofReading">
-                    Relecture par JSS
-                  </label>
-                </div>
-
-                <!-- Département -->
-                <div class="mb-3" *ngIf="departments">
-                  <label for="announcementDepartment" class="form-label">Département de publication</label>
-                  <select class="form-control" id="announcementDepartment" required
-                    [(ngModel)]="announcementDepartment">
-                    <option [ngValue]="department" *ngFor="let department of departments">
-                      {{ department.code }} - {{ department.label }}
-                    </option>
-                  </select>
-
-                  <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
-                    *ngIf="checkedOnce && !announcementRedactedByJss && !announcementDepartment">
-                    <i class="ai-octagon-alert fs-xl"></i>
-                    <div class="ps-2">Le département est obligatoire</div>
+                  <!-- Toggle relecture -->
+                  <div class="form-check form-switch d-flex align-items-center mb-4">
+                    <generic-toggle [(model)]="provision.announcement.isReReadByJss" label="Relecture par le JSS"
+                      [form]="informationForm" [propertyName]="'isReReadByJss'+provision.order"
+                      [isDisabled]="false"></generic-toggle>
                   </div>
-                </div>
 
-                <!-- Rubrique -->
-                <div class="mb-3" *ngIf="noticeTypeFamilies">
-                  <label for="announcementNoticeFamily" class="form-label">Rubrique de publication</label>
-                  <select class="form-control" id="announcementNoticeFamily" required
-                    [(ngModel)]="announcementNoticeFamily">
-                    <option [ngValue]="noticeTypeFamily" *ngFor="let noticeTypeFamily of noticeTypeFamilies">
-                      {{ noticeTypeFamily.label }}
-                    </option>
-                  </select>
-
-                  <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
-                    *ngIf="checkedOnce && !announcementRedactedByJss && !announcementNoticeFamily">
-                    <i class="ai-octagon-alert fs-xl"></i>
-                    <div class="ps-2">La rubrique est obligatoire</div>
+                  <!-- Département -->
+                  <div class="mb-3" *ngIf="departments">
+                    <select-department [(model)]="provision.announcement.department" label="Département de publication"
+                      [form]="informationForm" [propertyName]="'department'+provision.order" [isMandatory]="true"
+                      [isDisabled]="false"></select-department>
                   </div>
-                </div>
 
-                <!-- Sous-rubrique -->
-                <div class="mb-3" *ngIf="announcementNoticeFamily && noticeTypes">
-                  <label for="announcementNoticeType" class="form-label">Sous-rubrique de publication</label>
-                  <select class="form-control" id="announcementNoticeType" required
-                    [(ngModel)]="announcementNoticeType">
-                    <ng-container *ngFor="let noticeType of noticeTypes">
-                      <option [ngValue]="noticeType"
-                        *ngIf="noticeType.noticeTypeFamily.id == announcementNoticeFamily.id">
-                        {{ noticeType.label }}
+                  <!-- Rubrique -->
+                  <div class="mb-3" *ngIf="noticeTypeFamilies">
+                    <!-- <label for="announcementNoticeFamily" class="form-label">Rubrique de publication</label>
+                    <select class="form-control" id="announcementNoticeFamily" required
+                      [(ngModel)]="announcementNoticeFamily">
+                      <option [ngValue]="noticeTypeFamily" *ngFor="let noticeTypeFamily of noticeTypeFamilies">
+                        {{ noticeTypeFamily.label }}
                       </option>
-                    </ng-container>
-                  </select>
+                    </select> -->
+                    <!-- TODO : faire le select et mettre dans provision.announcement.noticeFamily -->
+                  </div>
 
-                  <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
-                    *ngIf="checkedOnce && !announcementRedactedByJss && !announcementNoticeType">
-                    <i class="ai-octagon-alert fs-xl"></i>
-                    <div class="ps-2">La sous-rubrique est obligatoire</div>
+                  <!-- Sous-rubrique -->
+                  <div class="mb-3" *ngIf="provision.announcement.noticeTypeFamily && noticeTypes">
+                    <!-- <label for="announcementNoticeType" class="form-label">Sous-rubrique de publication</label>
+                    <select class="form-control" id="announcementNoticeType" required
+                      [(ngModel)]="announcementNoticeType">
+                      <ng-container *ngFor="let noticeType of noticeTypes">
+                        <option [ngValue]="noticeType"
+                          *ngIf="noticeType.noticeTypeFamily.id == announcementNoticeFamily.id">
+                          {{ noticeType.label }}
+                        </option>
+                      </ng-container>
+                    </select> -->
+                    <!-- TODO : faire un multiple select et mettre dans provision.announcement.noticeTypes -->
+
                   </div>
                 </div>
-              </div>
 
-              <div class="col-md-9">
-                <label for="announcementTextarea" class="form-label">Texte de l'annonce</label>
-                <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
-                  [data]="announcementNoticeInit" (change)="onNoticeChange($event)">
-                </ckeditor>
+                <div class="col-md-9">
+                  <label for="announcementTextarea" class="form-label">Texte de l'annonce</label>
+                  <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
+                    [data]="announcementNoticeInit" (change)="onNoticeChange($event, provision)">
+                  </ckeditor>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+        </ng-container>
       </div>
     </div>
   </section>
