--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
@@ -77,15 +77,15 @@
         </div>
         <!-- Stacked checkboxes -->
         <div class="d-flex flex-column flex-md-row flex-wrap">
-          <ng-container *ngFor="let service of selectedServiceFamily.services">
+          <ng-container *ngFor="let service of selectedServiceFamily.services ; let indexService  =index">
             <div class="form-check service-item m-1"
               *ngIf="service.customLabel.toLocaleLowerCase().indexOf(searchtext.toLocaleLowerCase())>=0 && selectedAssoIndex!=null">
-              <input class="form-check-input" type="checkbox" id="ex-check-1"
+              <input class="form-check-input" type="checkbox" [id]="'ex-check-'+indexService"
                 (click)="removeServiceFromCurrentAffaire(service)" *ngIf="getServiceIndexInCurrentAffaire(service)>=0"
                 checked>
-              <input class="form-check-input" type="checkbox" id="ex-check-1"
+              <input class="form-check-input" type="checkbox" [id]="'ex-check-'+indexService"
                 (click)="addServiceToCurrentAffaire(service)" *ngIf="getServiceIndexInCurrentAffaire(service)<0">
-              <label class="form-check-label" for="ex-check-1">{{service.customLabel }}</label>
+              <label class="form-check-label" [for]="'ex-check-'+indexService">{{service.customLabel }}</label>
             </div>
           </ng-container>
         </div>
