--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -39,6 +39,10 @@
                 <generic-toggle [(model)]="announcement.isProofReadingDocument" label="Epreuve de relecture ?"
                   [form]="announcementForm" propertyName="isProofReadingDocument"></generic-toggle>
               </td>
+              <td>
+                <generic-toggle [(model)]="announcement.isReReadByJss" label="Relecture demandée par le client ?"
+                  [form]="announcementForm" propertyName="isReReadByJss"></generic-toggle>
+              </td>
             </tr>
           </table>
           <table class="full-width">
