--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -103,8 +103,6 @@
                     <td style="padding-top: 20px; text-align : center" colspan="2">
                         <strong><span th:if="${service.serviceLabelToDisplay!=null}"
                                 th:text="${service.serviceLabelToDisplay}"></span></strong>
-                        <strong><span th:if="${service.serviceLabelToDisplay==null}"
-                                th:text="${service.serviceTypes[0].label}"></span></strong>
                     </td>
                 </tr>
                 <th:block th:each="provision : ${service.provisions}"
@@ -228,7 +226,7 @@
         <th:block th:if="${assos!=null}" th:each="asso : ${assos}">
             <th:block th:if="${asso.services!=null} and ${service.assoServiceDocuments!=null}"
                 th:each="service : ${asso.services}">
-                <li><span th:text="${service.serviceType.label}"></span> : </li>
+                <li><span th:text="${service.serviceType.serviceLabelToDisplay}"></span> : </li>
                 <ul>
                     <li th:if="${service.assoServiceDocuments!=null}"
                         th:each="assoServiceDocument : ${service.assoServiceDocuments}">
