--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -128,11 +128,11 @@
       <div class="row">
         <div class="col-8">
           <div class="row">
-            <p class="col-auto fs-sm mb-1 footers-footer">Politique de protection des données
-              personnelles</p>
-            <p class="col-auto fs-sm mb-1 footers-footer">Mentions légales</p>
-            <p class="col-auto fs-sm mb-1 footers-footer">CGU</p>
-            <p class="col-auto fs-sm mb-1 footers-footer">Politique d'utilisation des Cookies</p>
+            <p class="col-auto fs-sm mb-1 footers-footer" [routerLink]="'privacy-policy'" fragment="privacy">Politique
+              de protection des données personnelles</p>
+            <p class="col-auto fs-sm mb-1 footers-footer" [routerLink]="'privacy-policy'" fragment="legal">Mentions
+              légales</p>
+            <p class="col-auto fs-sm mb-1 footers-footer" [routerLink]="'privacy-policy'" fragment="cgu">CGU</p>
           </div>
         </div>
         <div class="col-4">
