fix add isMergeable toggle in Admin Osiris for provisionType referential

--- a/client/src/app/modules/administration/components/referentials/referential-provision-type/referential-provision-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-provision-type/referential-provision-type.component.html
@@ -95,6 +95,11 @@
                 label="Fréquence de récurrence" [form]="entityForm" propertyName="recurringFrequency"
                 [isMandatory]="true" [isDisabled]="!editMode"></select-customer-order-frequency>
             </td>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isMergeable"
+                label="Peut être fusionné à d'autres prestations fusionnables" [form]="entityForm"
+                propertyName="isMergeable" [isDisabled]="!editMode"></generic-toggle>
+            </td>
           </tr>
         </table>
         <table class="full-width" *ngIf="selectedEntity.billingTypes">
